# AgenticWiki

./: .gitignore  README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: config.py  db.py  main.py
backend/app/models/: entities.py
backend/app/repositories/: document_repository.py  settings_repository.py
backend/app/routers/: chat.py  documents.py  graph.py  helpers.py  ingest.py  search.py  settings.py  upload.py
backend/app/schemas/: chat.py  common.py  documents.py  graph.py  search.py  settings.py  upload.py
backend/app/services/: chunking_service.py  embedding_service.py  file_service.py  graph_service.py  ingestion_service.py  llm_service.py  search_service.py  text_extraction_service.py
backend/app/utils/: json.py
frontend/: README.md  package.json
frontend/app/: globals.css  layout.tsx
frontend/app/graph/: page.tsx
frontend/app/search/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/upload/: page.tsx
frontend/components/dashboard/: DashboardClient.tsx
frontend/components/document/: DocumentCard.tsx  DocumentDetailClient.tsx
frontend/components/graph/: GraphClient.tsx  KnowledgeGraph.module.css
frontend/components/layout/: AppShell.module.css  AppShell.tsx  ThemeController.tsx
frontend/components/search/: SearchClient.module.css  SearchClient.tsx
frontend/components/settings/: SettingsClient.tsx
frontend/components/ui/: Button.module.css  Button.tsx  Card.module.css  Card.tsx  EmptyState.module.css  EmptyState.tsx  Form.module.css  Input.tsx  Modal.tsx  (+7 more)
frontend/lib/: api.ts  types.ts  utils.ts
(+3 files in other folders)
